	- TP/East Timor changed to TL/Timor-Leste, reflecting changes in ISO-3166

1.5	January 19th, 2006
	- Added support for GeoIP Netspeed lookups (Frank Mather)
	- Replaced Yugoslavia with Serbia and Montenegro

1.4	December 18th, 2004
	- Added GEOIP_MEMORY_CACHE option (Frank Mather)

1.3	November 10th, 2004
	- Fixed City Database lookup (Frank Mather)

1.2	November 2nd, 2004
	- Fixed problem with postalCode, city and region fields
	  returning null char (Frank Mather)

1.1	October 6th, 2004
	Added swapbytes function, fixed lookup issues (Frank Mather)

1.0	July 23rd, 2004
	Initial Release