@@ -1,3 +1,6 @@
+	- Replaced swapbytes(addr.Address) with bytestoLong(addr.GetAddressBytes())
+		since IPAddress.Address property was deprecated in .NET 2.0
+		(Malcolm van Raalte / GeoSign)
 	- TP/East Timor changed to TL/Timor-Leste, reflecting changes in ISO-3166
 
 1.5	January 19th, 2006
